@@ -5,22 +5,21 @@
 
 package org.opensearch.securityanalytics.findings;
 
+
 import java.time.Instant;
 import java.time.ZoneId;
-import java.util.ArrayDeque;
 import java.util.Collections;
 import java.util.List;
-import java.util.Queue;
-import java.util.stream.Collectors;
-import org.opensearch.action.ActionListener;
+
+import org.opensearch.client.node.NodeClient;
+import org.opensearch.core.action.ActionListener;
 import org.opensearch.client.Client;
 import org.opensearch.commons.alerting.model.CronSchedule;
 import org.opensearch.commons.alerting.model.DocLevelQuery;
 import org.opensearch.commons.alerting.model.Finding;
 import org.opensearch.commons.alerting.model.FindingDocument;
-import org.opensearch.commons.alerting.model.FindingWithDocs;
 import org.opensearch.commons.alerting.model.Table;
-import org.opensearch.rest.RestStatus;
+import org.opensearch.core.rest.RestStatus;
 import org.opensearch.securityanalytics.action.FindingDto;
 import org.opensearch.securityanalytics.action.GetDetectorAction;
 import org.opensearch.securityanalytics.action.GetDetectorRequest;
@@ -37,12 +36,14 @@ import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.spy;
+import static org.mockito.Mockito.when;
 
 public class FindingServiceTests extends OpenSearchTestCase {
 
     public void testGetFindings_success() {
         FindingsService findingsService = spy(FindingsService.class);
         Client client = mock(Client.class);
+        NodeClient nodeClient = mock(NodeClient.class);
         findingsService.setIndicesAdminClient(client);
         // Create fake GetDetectorResponse
         Detector detector = new Detector(
@@ -53,18 +54,20 @@ public class FindingServiceTests extends OpenSearchTestCase {
                 new CronSchedule("31 * * * *", ZoneId.of("Asia/Kolkata"), Instant.ofEpochSecond(1538164858L)),
                 Instant.now(),
                 Instant.now(),
-                Detector.DetectorType.OTHERS_APPLICATION.getDetectorType(),
+                "others_application",
                 null,
                 List.of(),
                 List.of(),
                 List.of("monitor_id1", "monitor_id2"),
-                DetectorMonitorConfig.getRuleIndex(Detector.DetectorType.OTHERS_APPLICATION.getDetectorType()),
+                DetectorMonitorConfig.getRuleIndex("others_application"),
                 null,
-                DetectorMonitorConfig.getAlertsIndex(Detector.DetectorType.OTHERS_APPLICATION.getDetectorType()),
+                DetectorMonitorConfig.getAlertsIndex("others_application"),
                 null,
                 null,
-                DetectorMonitorConfig.getFindingsIndex(Detector.DetectorType.OTHERS_APPLICATION.getDetectorType()),
-                Collections.emptyMap()
+                DetectorMonitorConfig.getFindingsIndex("others_application"),
+                Collections.emptyMap(),
+                Collections.emptyList(),
+                false
         );
         GetDetectorResponse getDetectorResponse = new GetDetectorResponse("detector_id123", 1L, RestStatus.OK, detector);
 
@@ -73,7 +76,7 @@ public class FindingServiceTests extends OpenSearchTestCase {
             ActionListener l = invocation.getArgument(2);
             l.onResponse(getDetectorResponse);
             return null;
-        }).when(client).execute(eq(GetDetectorAction.INSTANCE), any(GetDetectorRequest.class), any(ActionListener.class));
+        }).when(nodeClient).execute(eq(GetDetectorAction.INSTANCE), any(GetDetectorRequest.class), any(ActionListener.class));
 
         // Alerting GetFindingsResponse mock #1
         Finding finding1 = new Finding(
@@ -83,7 +86,7 @@ public class FindingServiceTests extends OpenSearchTestCase {
                 "monitor_id1",
                 "monitor_name1",
                 "test_index1",
-                List.of(new DocLevelQuery("1","myQuery","fieldA:valABC", List.of())),
+                List.of(new DocLevelQuery("1", "myQuery", Collections.emptyList(), "fieldA:valABC", List.of())),
                 Instant.now(),
                 "1234"
         );
@@ -99,7 +102,7 @@ public class FindingServiceTests extends OpenSearchTestCase {
                 "monitor_id2",
                 "monitor_name2",
                 "test_index2",
-                List.of(new DocLevelQuery("1","myQuery","fieldA:valABC", List.of())),
+                List.of(new DocLevelQuery("1", "myQuery", Collections.emptyList(), "fieldA:valABC", List.of())),
                 Instant.now(),
                 "1234"
         );
@@ -134,7 +137,7 @@ public class FindingServiceTests extends OpenSearchTestCase {
             ActionListener l = invocation.getArgument(4);
             l.onResponse(getFindingsResponse);
             return null;
-        }).when(findingsService).getFindingsByMonitorIds(any(), any(), anyString(), any(Table.class), any(ActionListener.class));
+        }).when(findingsService).getFindingsByMonitorIds(any(), any(), anyString(), any(Table.class), anyString(), anyString(), any(), any(), any(), any(ActionListener.class));
 
         // Call getFindingsByDetectorId
         Table table = new Table(
@@ -145,7 +148,7 @@ public class FindingServiceTests extends OpenSearchTestCase {
             0,
             null
         );
-        findingsService.getFindingsByDetectorId("detector_id123", table, new ActionListener<>() {
+        findingsService.getFindingsByDetectorId("detector_id123", table, null, null, null, null, null, new ActionListener<>() {
             @Override
             public void onResponse(GetFindingsResponse getFindingsResponse) {
                 assertEquals(2, (int)getFindingsResponse.getTotalFindings());
@@ -164,6 +167,8 @@ public class FindingServiceTests extends OpenSearchTestCase {
         FindingsService findingsService = spy(FindingsService.class);
         Client client = mock(Client.class);
         findingsService.setIndicesAdminClient(client);
+        // Mocking a NodeClient instance
+        NodeClient nodeClient = mock(NodeClient.class);
         // Create fake GetDetectorResponse
         Detector detector = new Detector(
                 "detector_id123",
@@ -173,18 +178,20 @@ public class FindingServiceTests extends OpenSearchTestCase {
                 new CronSchedule("31 * * * *", ZoneId.of("Asia/Kolkata"), Instant.ofEpochSecond(1538164858L)),
                 Instant.now(),
                 Instant.now(),
-                Detector.DetectorType.OTHERS_APPLICATION.getDetectorType(),
+                "others_application",
                 null,
                 List.of(),
                 List.of(),
                 List.of("monitor_id1", "monitor_id2"),
-                DetectorMonitorConfig.getRuleIndex(Detector.DetectorType.OTHERS_APPLICATION.getDetectorType()),
+                DetectorMonitorConfig.getRuleIndex("others_application"),
                 null,
-                DetectorMonitorConfig.getAlertsIndex(Detector.DetectorType.OTHERS_APPLICATION.getDetectorType()),
+                DetectorMonitorConfig.getAlertsIndex("others_application"),
                 null,
                 null,
-                DetectorMonitorConfig.getFindingsIndex(Detector.DetectorType.OTHERS_APPLICATION.getDetectorType()),
-                Collections.emptyMap()
+                DetectorMonitorConfig.getFindingsIndex("others_application"),
+                Collections.emptyMap(),
+                Collections.emptyList(),
+                false
         );
         GetDetectorResponse getDetectorResponse = new GetDetectorResponse("detector_id123", 1L, RestStatus.OK, detector);
 
@@ -193,13 +200,13 @@ public class FindingServiceTests extends OpenSearchTestCase {
             ActionListener l = invocation.getArgument(2);
             l.onResponse(getDetectorResponse);
             return null;
-        }).when(client).execute(eq(GetDetectorAction.INSTANCE), any(GetDetectorRequest.class), any(ActionListener.class));
+        }).when(nodeClient).execute(eq(GetDetectorAction.INSTANCE), any(GetDetectorRequest.class), any(ActionListener.class));
 
         doAnswer(invocation -> {
             ActionListener l = invocation.getArgument(4);
             l.onFailure(new IllegalArgumentException("Error getting findings"));
             return null;
-        }).when(findingsService).getFindingsByMonitorIds(any(), any(), anyString(), any(Table.class), any(ActionListener.class));
+        }).when(findingsService).getFindingsByMonitorIds(any(), any(), anyString(), any(Table.class), anyString(), anyString(), any(), any(), any(), any(ActionListener.class));
 
         // Call getFindingsByDetectorId
         Table table = new Table(
@@ -210,7 +217,7 @@ public class FindingServiceTests extends OpenSearchTestCase {
                 0,
                 null
         );
-        findingsService.getFindingsByDetectorId("detector_id123", table, new ActionListener<>() {
+        findingsService.getFindingsByDetectorId("detector_id123", table, null, null, null, null, null, new ActionListener<>() {
             @Override
             public void onResponse(GetFindingsResponse getFindingsResponse) {
                 fail("this test should've failed");
@@ -245,7 +252,7 @@ public class FindingServiceTests extends OpenSearchTestCase {
                 0,
                 null
         );
-        findingsService.getFindingsByDetectorId("detector_id123", table, new ActionListener<>() {
+        findingsService.getFindingsByDetectorId("detector_id123", table, null, null, null, null, null, new ActionListener<>() {
             @Override
             public void onResponse(GetFindingsResponse getFindingsResponse) {
                 fail("this test should've failed");
